// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 75px;
  height: 14px;
}

.c2 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  background-color: #0A169A;
}

.c2 + .c1 {
  margin-left: 5px;
}

.c3 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.30000000000000004s;
  animation-delay: 0.30000000000000004s;
  background-color: #0A169A;
}

.c3 + .c1 {
  margin-left: 5px;
}

.c4 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
  background-color: #0A169A;
}

.c4 + .c1 {
  margin-left: 5px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    />
    <div
      className="c1 c3"
    />
    <div
      className="c1 c4"
    />
  </div>
</div>
`;

exports[`should render with optional props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 45px;
  height: 10px;
}

.c2 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  background-color: #0A169A;
}

.c2 + .c1 {
  margin-left: 5px;
}

.c3 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.30000000000000004s;
  animation-delay: 0.30000000000000004s;
  background-color: #0A169A;
}

.c3 + .c1 {
  margin-left: 5px;
}

.c4 {
  width: 14px;
  height: 14px;
  border-radius: 100px;
  -webkit-animation: cHDNma 1.3s ease infinite;
  animation: cHDNma 1.3s ease infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
  background-color: #0A169A;
}

.c4 + .c1 {
  margin-left: 5px;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1 c2"
    />
    <div
      className="c1 c3"
    />
    <div
      className="c1 c4"
    />
  </div>
</div>
`;
